# esp32s3_i2c_protocol

./: README.md
i2c_protocol/: CMakeLists.txt  Kconfig  README.md
i2c_protocol/include/: i2c_protocol_master.h  i2c_protocol_shared.h  i2c_protocol_slave.h
i2c_protocol/src/: i2c_protocol_master.c  i2c_protocol_shared.c  i2c_protocol_slave.c
